<resources>
    <string name="app_name">S C L A D</string>
    <string name="place_btn">Пiдрахунок\nкiлькостi\nзапчастин</string>
    <string name="btn_place">Пiдрахунок\nкiлькостi\nмiсць</string>
    <string name="btn_invent">Вибiрковий\nпiдрахунок\nзапчастин</string>
    <string name="exit_app">Вийти</string>
    <string name="load">Завантажити</string>
    <string name="load_title">Завантажено</string>
    <string name="file_name">File name</string>
    <string name="date">Date</string>
    <string name="file_manager_title">ВИБIР ФАЙЛУ</string>
    <string name="q_dock">Кiлькiсть накладних</string>
    <string name="q_places">Кiлькiсть мiсць</string>
    <string name="on_scan">Проскановано</string>
    <string name="q_ost">Залишок</string>
    <string name="scaning">с к а н у в а т и</string>
    <string name="scan_complete">Завершити сканування</string>

    <string name="plus_one">Задати кількість</string>
    <string name="set_location">Задати мiсце</string>
    <string name="scan"> S C A N </string>
    <string name="fact_quantity">К-ть фактично</string>
    <string name="dock_quantity">К-ть по накладнiй</string>
    <string name="razniza">Рiзниця</string>
    <string name="add_quantity">Добавити</string>
    <string name="cancel">Вiдмiнити</string>
    <string name="dial_title">Вкажiть нову локацiю</string>
    <string name="dial_save">Зберегти</string>
    <string name="dial_cancel">Вiдмiнити</string>
    <string name="dial_format">1AA-00-00</string>
    <string name="load_to_file">Вигрузити в файл</string>
    <string name="dialog_title">Вкажiть кiлькiсть</string>
</resources>
