<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDark"
    style="@style/AppTheme.NoActionBar"
    tools:ignore="RtlSymmetry"
    tools:context=".CalculateActivity">


    <TextView
        android:id="@+id/txt_number_doc"
        style="@style/TextStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:gravity="left"
        android:background="@color/colorDark" />

    <TextView
        android:id="@+id/txt_date_doc"
        style="@style/TextStyle"
        android:layout_width="200dp"
        android:gravity="right"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:background="@color/colorDark" />

    <TextView
        android:id="@+id/txt_part_name"
        style="@style/TextStyle"
        android:layout_width="700dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_location"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:gravity="center" />
    <TextView
        android:id="@+id/txt_artikul"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_toStartOf="@+id/txt_location"
        android:layout_marginEnd="10dp"
        android:layout_above="@+id/edt_barcode"
        android:layout_centerHorizontal="true"
        style="@style/TextStyle"/>

    <TextView
        android:id="@+id/txt_location"
        style="@style/TextStyle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edt_barcode"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp" />
    <TextView
        android:id="@+id/txt_quantity"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edt_barcode"
        android:layout_margin="20dp"
        android:layout_toEndOf="@+id/txt_location"
        android:layout_marginStart="10dp"
        style="@style/TextStyle"/>

    <EditText
        android:id="@+id/edt_barcode"
        style="@style/TextStyle"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="50dp"
        android:cursorVisible="false"
        android:gravity="center"
        android:hint="@string/scan"
        android:textColorHint="@color/colorAccent"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textVisiblePassword"
        android:textSize="20sp"
        android:windowSoftInputMode="stateHidden|adjustResize" />

    <CheckBox
        android:id="@+id/box_plus_one"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_barcode"
        android:layout_marginStart="70dp"
        android:layout_marginTop="40dp"
        android:padding="10dp"
        android:text="@string/plus_one"
        android:textColor="@color/colorWhite"
        android:theme="@style/MyCheckBox" />

    <CheckBox
        android:id="@+id/box_location"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/box_plus_one"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/set_location"
        android:textColor="@color/colorWhite"
        android:theme="@style/MyCheckBox" />

    <TextView
        android:id="@+id/doc_quantity"
        style="@style/TextStyle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_barcode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="end"
        android:paddingEnd="10dp"
        android:text="@string/dock_quantity"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_doc_quantity"
        style="@style/TextStyle"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_barcode"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@+id/doc_quantity"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/real_quantity"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_doc_quantity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="end"
        style="@style/TextStyle"
        android:text="@string/fact_quantity"
        android:textSize="18sp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"/>
    <TextView
        android:id="@+id/txt_real_quantity"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_doc_quantity"
        android:layout_marginTop="10dp"
        style="@style/TextStyle"
        android:textSize="18sp"
        android:layout_toEndOf="@+id/real_quantity"
        android:layout_marginStart="15dp" />
    <TextView
        android:id="@+id/plus_mines"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_real_quantity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:paddingEnd="10dp"
        style="@style/TextStyle"
        android:text="@string/razniza"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/txt_difference"
        style="@style/TextStyle"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_real_quantity"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/plus_mines"
        android:textSize="18sp" />

    <ImageButton
        android:id="@+id/b_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@null"
        android:padding="20dp"
        android:layout_margin="30dp"
        android:src="@drawable/back_icon"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="60dp"
        android:background="@color/colorDark"
        android:padding="20dp"
        android:text="@string/load_to_file"
        android:textColor="@color/colorWhite" />

</RelativeLayout>