<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayActivity"
    android:baselineAligned="false">
    <LinearLayout
        android:id="@+id/left_layout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2.5"
        android:background="@color/colorDark"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/display_lt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/title_quant"
                android:text="@string/q_dock"
                style="@style/DisplayStyle"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/title_quant_number"
                style="@style/DisplayStyle"
                android:layout_width="30dp"
                android:layout_marginTop="25dp"
                android:gravity="end"
                android:layout_toRightOf="@+id/title_quant"
                android:layout_toEndOf="@+id/title_quant"
                tools:ignore="RtlHardcoded" />
            <TextView
                android:id="@+id/title_places"
                style="@style/DisplayStyle"
                android:layout_below="@+id/title_quant"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:text="@string/q_places"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="15dp"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/title_place_number"
                style="@style/DisplayStyle"
                android:layout_width="30dp"
                android:layout_below="@+id/title_quant"
                android:layout_marginTop="5dp"
                android:gravity="end"
                android:layout_toRightOf="@+id/title_quant"
                android:layout_toEndOf="@+id/title_quant"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/title_scan"
                style="@style/DisplayStyle"
                android:layout_below="@+id/title_places"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:text="@string/on_scan"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="15dp"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/title_scan_number"
                style="@style/DisplayStyle"
                android:layout_width="30dp"
                android:layout_below="@+id/title_places"
                android:layout_marginTop="5dp"
                android:gravity="end"
                android:layout_toRightOf="@+id/title_quant"
                android:layout_toEndOf="@+id/title_quant"
                tools:ignore="RtlHardcoded" />
            <TextView
                android:id="@+id/title_difference"
                style="@style/DisplayStyle"
                android:layout_below="@+id/title_scan"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:text="@string/q_ost"
                android:layout_marginRight="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/title_difference_number"
                style="@style/DisplayStyle"
                android:layout_width="30dp"
                android:layout_below="@+id/title_scan"
                android:layout_marginTop="5dp"
                android:gravity="end"
                android:layout_toRightOf="@+id/title_quant"
                android:layout_toEndOf="@+id/title_quant"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/scanner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_difference"
                android:padding="15dp"
                android:layout_margin="40dp"
                android:hint="@string/scaning"
                android:background="@null"
                android:textColorHint="@color/colorAccent"
                android:ems="10"
                android:inputType="textPersonName"
                android:gravity="center"
                android:textColor="@color/green"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:textSize="22sp"
                android:textStyle="bold"
                android:windowSoftInputMode="stateAlwaysHidden"
                android:cursorVisible="false"/>

            <ImageView
                android:id="@+id/im_status"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_below="@+id/scanner"
                android:layout_marginTop="100dp"
                android:layout_centerHorizontal="true"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp"
                android:background="@null"
                android:src="@drawable/back_icon"
                tools:ignore="ContentDescription" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/center"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.8"
        android:background="@color/colorDark"
        android:orientation="vertical">

        <ListView
            android:id="@+id/box_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">
        </ListView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/display_layout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:gravity="center"
        android:background="@color/colorDark"
        android:orientation="vertical">

        <ListView
            android:id="@+id/list_parts"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp">

        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:background="@color/colorDark"
            android:gravity="end">
            <Button
                android:id="@+id/scan_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:text="@string/scan_complete"
                android:layout_gravity="bottom"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorDark"
                android:layout_marginEnd="25dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>